src/App.css
@import 'tailwindcss';
@plugin "daisyui";

@layer base {
  *,
  ::after,
  ::before,
  ::backdrop,
  ::file-selector-button {
    border-color: var(--color-gray-200, currentColor);
  }
}

@theme {
    --color-myPink1: #E2BBE9;
    --color-myPink2: #E966A0;
}

